--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    scroll-behavior: smooth;
+    box-sizing: border-box;
 }
 
 body {
@@ -28,7 +28,6 @@ header {
     -ms-flex-pack: justify;
     justify-content: space-between;
     margin: 0;
-    /*padding: 0 1rem;*/
     text-align: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
@@ -77,11 +76,12 @@ a.menu__link {
 }
 
 a.menu__link:hover {
-    color: orange;
+    color: var(--fuente-verde);
 }
 
 .hamburger {
     display: none;
+    
 }
 
 .bar,
@@ -173,4 +173,17 @@ a.menu__link:hover {
     a.nav__link {
         padding: 0.75rem 0;
     }
+}
+
+/*Portada*/
+.portada{
+    display: flex;
+    justify-content: space-between;
+}
+.portada__titulo{
+    display: flex;
+    
+}
+.contenido__blanco{
+    color: var(--fuente-blanco);
 }
