Agregando la sección Skills

--- a/css/bases.css
+++ b/css/bases.css
@@ -16,6 +16,7 @@
     /*Fuente*/
     --fuente-blanco: #F4F4F4;
     --fuente-verde:#00D3AE;
+    --fuente-lila: #5C307D;
     
     /*Enlace*/
     --fuente-enlace: #0006FF;
