--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,12 @@
 body {
     height: auto;
     width: 100%;
-    background-image:url(/img/background.png) ;
+    background-image: url(/img/background.png);
 }
 
 .logo {
-    color: #fff;
-    font-size: 1.5rem;
+    color: var(--fuente-blanco);
+    font-size: 1rem;
     font-weight: bold;
 }
 
@@ -81,7 +81,7 @@ a.menu__link:hover {
 
 .hamburger {
     display: none;
-    
+
 }
 
 .bar,
@@ -176,40 +176,111 @@ a.menu__link:hover {
 }
 
 /*Portada*/
-.portada{
+.portada {
     display: flex;
     justify-content: space-between;
     padding-top: 100px;
     margin: 0 120px;
 }
-.portada__contenido{
+
+.portada__contenido {
     display: flex;
     flex-direction: column;
     align-items: left;
     justify-content: center;
 }
-.portada__titulo{
+
+.portada__titulo {
     display: flex;
 
 }
-.mano{
+
+.mano {
     width: 50px;
     margin-right: 10px;
     float: left;
 }
-.titulo{
-    
+
+.titulo {
     line-height: 54px;
 }
 
-.contenido__blanco{
+.contenido__blanco {
     color: var(--fuente-blanco);
-    
-    line-height: 1.5rem;
+    line-height: 2rem;
     font-size: 20px;
+    font-weight: 300;
 }
 
-.portada__subtitulo{
+.portada__subtitulo {
     margin-top: 8px;
     padding-right: 450px;
 }
+
+/*SOBRE MI*/
+.container__sobreMi{
+    padding: 120px 0;
+
+}
+.sobre__mi {
+    display: flex;
+    border: 2px solid var(--fuente-verde);
+    filter: drop-shadow(0px 0px 4px rgba(123, 97, 255, 0.38));
+    border-radius: 10px;
+    padding-top: 100px;
+    margin: 0 120px;
+    height: 525px;
+}
+
+.sobre__mi img {
+    height: 288px;
+    padding-left: 45px;
+    padding-right: 45px;
+
+}
+
+.subtitulo__blanco {
+    text-align: left;
+}
+
+.parrafo__blanco {
+    padding-top: 40px;
+}
+
+.parrafo__sobreMi {
+    padding-right: 64px;
+}
+
+/*Skills*/
+.skills {
+    background-color: var(--fuente-blanco);
+    padding-top: 100px;
+    height: 700px;
+}
+
+.subtitulo__negro {
+    text-align: center;
+    color: var(--fuente-lila);
+}
+.cards__tecno {
+    padding-top:30px ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 40px;
+    margin: 0 120px;
+}
+.card {
+    width: 200px;
+    height: 180px;
+    border-radius: 30px;
+    background: #e0e0e0;
+    box-shadow: 15px 15px 30px var(--fuente-lila),
+        -15px -15px 30px #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
