--- a/css/styles.css
+++ b/css/styles.css
@@ -218,10 +218,11 @@ a.menu__link:hover {
 }
 
 /*SOBRE MI*/
-.container__sobreMi{
+.container__sobreMi {
     padding: 120px 0;
 
 }
+
 .sobre__mi {
     display: flex;
     border: 2px solid var(--fuente-verde);
@@ -262,8 +263,9 @@ a.menu__link:hover {
     text-align: center;
     color: var(--fuente-lila);
 }
+
 .cards__tecno {
-    padding-top:30px ;
+    padding-top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -271,6 +273,7 @@ a.menu__link:hover {
     gap: 40px;
     margin: 0 120px;
 }
+
 .card {
     width: 200px;
     height: 180px;
@@ -284,3 +287,77 @@ a.menu__link:hover {
 
 }
 
+/*Formacion academica*/
+.formacion {
+    background-color: var(--fuente-lila);
+    padding-top: 80px;
+    padding-bottom: 160px;
+}
+
+.titulo__formacion {
+    text-align: center;
+    padding-bottom: 32px;
+}
+
+.flip-card {
+    background-color: transparent;
+    width: 190px;
+    height: 254px;
+    perspective: 1000px;
+    font-family: var(--poppins);
+    
+}
+
+.img_formacion {
+    width:60% ;
+    
+}
+
+.title {
+    font-size: 1.5em;
+    font-weight: 900;
+    text-align: center;
+    margin: 0;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+    box-shadow: 0 8px 14px 0 rgba(0, 0, 0, 0.2);
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border: 2px solid var(--fuente-verde);
+    border-radius: 30px;
+}
+
+.flip-card-front {
+    background:var(--fuente-blanco);
+    color: var(--fuente-blanco);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flip-card-back {
+    background: var(--fuente-lila);
+    color: var(--fuente-blanco);
+    transform: rotateY(180deg);
+}
