--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 body {
     height: auto;
     width: 100%;
-    background-image: url(/img/background.png);
+    background-image: url(img/background.png);
 }
 
 .logo {
