--- a/css/styles.css
+++ b/css/styles.css
@@ -7,173 +7,22 @@
 body {
     height: auto;
     width: 100%;
-    background-image: url(img/background.png);
-}
-
-.logo {
-    color: var(--fuente-blanco);
-    font-size: 1rem;
-    font-weight: bold;
-}
-
-header {
-    height: 75px;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    margin: 0;
-    text-align: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-
+    background-image: url(/img/background.png);
 }
 
 ul {
     margin-bottom: 0;
 }
 
-.navbar {
-    font-family: var(--quattrocento-sans);
-    text-align: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
-}
-
-.nav__menu li {
+li{
     list-style: none;
-    padding: 0 1rem;
 }
 
-.nav__menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 0 auto;
-    text-align: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-}
-
-a.menu__link {
-    color: #fff;
+a{
     text-decoration: none;
-    font-size: 1.5rem;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
 }
 
-a.menu__link:hover {
-    color: var(--fuente-verde);
-}
 
-.hamburger {
-    display: none;
-
-}
-
-.bar,
-.fa-times {
-    width: 1.5rem;
-    height: 3px;
-    display: block;
-    color: #fff;
-    padding: 0;
-    margin: 6px;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    background-color: #fff;
-}
-
-.bar:nth-child(1) {
-    width: 100%;
-}
-
-.bar:nth-child(2) {
-    width: 200%;
-}
-
-.bar:nth-child(3) {
-    width: 300%;
-}
-
-@media (max-width: 992px) {
-    .hamburger {
-        display: block;
-    }
-
-    .active .bar:nth-child(2) {
-        opacity: 0;
-    }
-
-    .active .bar:nth-child(1) {
-        -webkit-transform: translateY(8px) rotate(-315deg);
-        transform: translateY(8px) rotate(-315deg);
-        width: 300%;
-    }
-
-    .active .bar:nth-child(3) {
-        -webkit-transform: translateY(-10px) rotate(-45deg);
-        transform: translateY(-10px) rotate(-45deg);
-        width: 300%;
-    }
-
-    .nav__menu {
-        width: 100%;
-        height: 100%;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-        justify-content: center;
-        align-items: center;
-        position: fixed;
-        top: 75px;
-        right: -100%;
-        -webkit-transition: 0.5s;
-        transition: 0.5s;
-        margin: 0 auto;
-    }
-
-    .nav__menu li {
-        padding: 1rem 0;
-    }
-
-    a.nav__link {
-        margin: 1rem 0;
-        color: #333;
-        z-index: 1;
-    }
-
-    .active {
-        right: 0;
-        z-index: 100;
-        transition: 0.2s ease;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    a.nav__link {
-        padding: 0.75rem 0;
-    }
-}
 
 /*Portada*/
 .portada {
@@ -305,12 +154,12 @@ a.menu__link:hover {
     height: 254px;
     perspective: 1000px;
     font-family: var(--poppins);
-    
+
 }
 
 .img_formacion {
-    width:60% ;
-    
+    width: 60%;
+
 }
 
 .title {
@@ -349,7 +198,7 @@ a.menu__link:hover {
 }
 
 .flip-card-front {
-    background:var(--fuente-blanco);
+    background: var(--fuente-blanco);
     color: var(--fuente-blanco);
     display: flex;
     justify-content: center;
@@ -360,4 +209,165 @@ a.menu__link:hover {
     background: var(--fuente-lila);
     color: var(--fuente-blanco);
     transform: rotateY(180deg);
+}
+
+/*Proyectos*/
+.container__projects{
+    padding-top: 80px;
+
+}
+.cards_projects {
+    width: 538px;
+    height: 386px;
+    position: absolute;
+    background: url(/img/encriptador.png);
+    background-size: cover;
+    border-radius: 10px;
+    cursor: pointer;
+    box-shadow: 0px 4px 10px 1px rgba(123, 97, 255, 0.19);
+
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr 2fr 1fr;
+    background: #f5f5f5;
+    color: black;
+    opacity: 0;
+    transition: all 0.5s;
+    font-family: var(--quattrocento-sans);
+    border-radius: 10px;
+}
+
+.items {
+    padding-left: 20px;
+    letter-spacing: 3px;
+}
+
+.cards__contenido {
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.head {
+    font-size: 30px;
+    line-height: 30px;
+    transform: translateY(40px);
+    transition: all 0.7s;
+}
+.head, hr {
+        display: block;
+        width: 0;
+        border: none;
+        border-bottom: solid 2px #5C307D;
+        /* position: absolute;
+        bottom: 0;*/
+        left: 20px;
+        top: 130px;
+        transition: all .5s;
+    }
+
+
+.price {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 22px;
+    line-height: 10px;
+    font-weight: bold;
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.7s;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.button__tecno {
+    margin-right: 10px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), rgba(123, 97, 255, 0.38);
+    opacity: 0.5;
+    position: relative;
+    padding: 4px 12px;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 600;
+    text-decoration: none;
+    border: none;
+    border-radius: 99px;
+    outline: none;
+    overflow: hidden;
+    color: #5C307D;
+    text-align: center;
+}
+
+.enlace {
+    display: flex;
+}
+
+.button_enlace {
+    height: 52px;
+    margin-right: 10px;
+    background: #5C307D;
+    position: relative;
+    padding: 16px;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    border-radius: 99px;
+    outline: none;
+    overflow: hidden;
+    color: #5C307D;
+    text-align: center;
+    cursor: pointer;
+}
+
+.button_enlace a {
+    text-decoration: none;
+    color: #F5F5FF;
+}
+
+.cards_projects:hover .overlay {
+    opacity: 1;
+}
+.cards_projects:hover .overlay .head {
+    transform: translateY(0px);
+}
+.cards_projects:hover .overlay hr {
+    width: 150px;
+    transition-delay: 0.4s;
+}
+.cards_projects:hover .overlay .price {
+    transform: translateY(0px);
+    transition-delay: 0.3s;
+    opacity: 1;
+}
+.cards_projects:hover .overlay .enlace {
+    transform: translateY(0px);
+    transition-delay: 0.6s;
+    opacity: 1;
+}
+
+/*Contacto*/
+.formulario__contacto{
+    background-color: var(--fuente-blanco);
+    padding-top:30px;
+}
+.contacto__container{
+    display: flex;
+}
+
+/*FOOTER*/
+.footer{
+    height: 50px;
+}
+
+.contenido__footer{
+    padding-top:20px ;
+    text-align: center;
+
 }
