--- a/css/bases.css
+++ b/css/bases.css
@@ -40,6 +40,9 @@
         color: var(--fuente-blanco);
     }
 
+    h6{
+        font-size: small;
+    }
     p{
         font-family: var(--quattrocento-sans);
     }
