--- a/css/menu/bar.css
+++ b/css/menu/bar.css
@@ -1,14 +1,13 @@
-/*.bar,
-.fa-times {
+.bar, .fa-times {
     width: 1.5rem;
     height: 3px;
     display: block;
-    color: #fff;
+    color:var(--fuente-blanco);
     padding: 0;
     margin: 6px;
     -webkit-transition: 0.5s;
     transition: 0.5s;
-    background-color: #fff;
+    background-color:var(--fuente-blanco);
 }
 
 .bar:nth-child(1) {
@@ -22,4 +21,21 @@
 .bar:nth-child(3) {
     width: 300%;
 }
-*/
+@media (max-width: 992px) {
+
+    .active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .active .bar:nth-child(1) {
+        -webkit-transform: translateY(8px) rotate(-315deg);
+        transform: translateY(8px) rotate(-315deg);
+        width: 300%;
+    }
+
+    .active .bar:nth-child(3) {
+        -webkit-transform: translateY(-10px) rotate(-45deg);
+        transform: translateY(-10px) rotate(-45deg);
+        width: 300%;
+    }
+}
