--- a/css/menu/menu-link.css
+++ b/css/menu/menu-link.css
@@ -1,11 +1,10 @@
-/*.menu__link{
+a.menu__link {
     color:var(--fuente-blanco);
-    text-decoration: none;
     font-size: 1.5rem;
     -webkit-transition: 0.5s;
     transition: 0.5s;
 }
 
-a .menu__link:hover{
-    color: var(--boton-verde);
-}*/
+a.menu__link:hover {
+    color: var(--fuente-verde);
+}
