--- a/css/menu/nav-menu.css
+++ b/css/menu/nav-menu.css
@@ -1,14 +1,4 @@
-/*ul {
-    margin-bottom: 0;
-}
-
-.nav-menu li {
-    list-style: none;
-    padding: 0 1rem;
-}
-
-
-.nav-menu {
+.nav__menu {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -19,5 +9,47 @@
     align-items: center;
     -ms-flex-pack: distribute;
     justify-content: space-around;
-}  
-*/
+}
+.nav__menu li {
+    padding: 0 1rem;
+}
+
+@media (max-width: 992px) {
+    .nav__menu {
+        width: 100%;
+        height: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 75px;
+        right: -100%;
+        -webkit-transition: 0.5s;
+        transition: 0.5s;
+        margin: 0 auto;
+    }
+
+    .nav__menu li {
+        padding: 1rem 0;
+    }
+
+    a.nav__link {
+        margin: 1rem 0;
+        color: #333;
+        z-index: 1;
+    }
+
+    .active {
+        right: 0;
+        z-index: 100;
+        transition: 0.2s ease;
+    }
+}
