--- a/css/styles.css
+++ b/css/styles.css
@@ -22,49 +22,31 @@ a{
     text-decoration: none;
 }
 
-
-
-/*Portada*/
-.portada {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 100px;
-    margin: 0 120px;
-}
-
-.portada__contenido {
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: center;
-}
-
-.portada__titulo {
-    display: flex;
-
-}
-
-.mano {
-    width: 50px;
-    margin-right: 10px;
-    float: left;
-}
-
-.titulo {
-    line-height: 54px;
-}
-
-.contenido__blanco {
+.parrafo__blanco {
     color: var(--fuente-blanco);
     line-height: 2rem;
     font-size: 20px;
     font-weight: 300;
 }
 
-.portada__subtitulo {
-    margin-top: 8px;
-    padding-right: 450px;
-}
+
+    
+    
+    
+    
+    
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*SOBRE MI*/
 .container__sobreMi {
