--- a/css/bases.css
+++ b/css/bases.css
@@ -1,7 +1,7 @@
-:root{
+*{
     margin: 0;
     padding: 0;
-    scroll-behavior: smooth;
+    box-sizing: border-box;
     /*Colores de fondo*/
 
     
@@ -29,10 +29,16 @@
     --quattrocento-sans:'Quattrocento Sans', sans-serif;
 
     }
-    
+    html, body {
+        overflow-x: hidden; /* desactiva el scroll horizontal */
+        }
+    html{
+        height: 100%;
+    }
     body{
-        height: 100vh;
-        width: 100%;
+        min-height: 100%;
+        background-color: var(--fuente-lila);
+    /*background-image: url(/img/background.png);*/
     }
         
     h1,h2,h3,h4,h5,h6{
@@ -66,4 +72,16 @@
 
     ul, li {
         padding: 0;
+    }
+
+    ul {
+        margin-bottom: 0;
+    }
+    
+    li{
+        list-style: none;
+    }
+    
+    a{
+        text-decoration: none;
     }
