--- a/css/bases.css
+++ b/css/bases.css
@@ -44,15 +44,18 @@
     h1,h2,h3,h4,h5,h6{
         font-family: var(--poppins);
     }
+    
     h1{
         color: var(--fuente-blanco);
+    }
+    h2{
+        font-size: 2rem;
     }
     h6{
         font-size: small;
     }
     p{
         font-family: var(--quattrocento-sans);
-        font-size: 2rem;
     }
     .container{
         padding-left: 6%;
