--- a/css/portada/img-portada.css
+++ b/css/portada/img-portada.css
@@ -1,7 +1,13 @@
 
-/*Tablet*/
-@media only screen and (max-width: 768px) {
+/*Mobile*/
+@media screen and (min-width: 0) {
     .img__portada {
-        display: none;
+        height: 180px;
+    }
+}  
+/*Tablet*/
+@media screen and (min-width: 768px) {
+    .img__portada {
+        height: auto;
     }
 }  
