--- a/css/sobre-mi.css/subtitulo-sobreMi.css
+++ b/css/sobre-mi.css/subtitulo-sobreMi.css
@@ -2,3 +2,10 @@
     text-align: left;
     color: var(--fuente-blanco);
 }
+/*MObile*/
+
+@media screen and (min-width: 0) {
+    .subtitulo__sobreMi {
+        font-size: 1.5rem;  
+    }
+}
