--- a/css/menu/nav-menu.css
+++ b/css/menu/nav-menu.css
@@ -15,6 +15,11 @@
 }
 
 @media (max-width: 992px) {
+    .container{
+        max-width: 100%;
+        padding-left: 2%;
+        padding-right: 2%;
+    }
     .nav__menu {
         width: 100%;
         height: 100%;
