--- a/css/portada.css
+++ b/css/portada.css
@@ -28,6 +28,21 @@
 
     .portada {
         margin: 0px;
+
+    }
+}
+
+/*Desktop*/
+@media screen and (min-width: 1024px) {
+    .container {
+        margin: 0;
+        max-width: 100%;
+        padding-left: 6%;
+        padding-right: 6%;
+    }
+
+    .portada {
+
         margin: 0 120px;
     }
 }
