--- a/css/portada/img-portada.css
+++ b/css/portada/img-portada.css
@@ -2,7 +2,8 @@
 /*Mobile*/
 @media screen and (min-width: 0) {
     .img__portada {
-        width: 30%;
+        width: 40%;
+        height: auto;
     }
 }  
 /*Tablet*/
