--- a/css/sobre-mi.css/img-sobreMi.css
+++ b/css/sobre-mi.css/img-sobreMi.css
@@ -5,6 +5,7 @@
         .img__sobreMi {
                 height: 120px;
                 padding: 0 10px;
+                align-self: center;
         }
 }
 
