--- a/css/sobre-mi.css/container-sobreMi.css
+++ b/css/sobre-mi.css/container-sobreMi.css
@@ -1,7 +1,3 @@
-.container__sobreMi {
-    padding: 120px 0;
-
-}
 
 /*Mobile*/
 @media  screen and (min-width: 0){
@@ -26,5 +22,18 @@
         }
         .container__sobreMi {
         padding: 80px 0px;
+        }
+}   
+
+/*Desktop*/
+@media  screen and (min-width: 1024px) {
+    .container{
+        margin: 0;
+        max-width: 100%;
+        padding-left: 6%;
+        padding-right: 6%;
+        }
+        .container__sobreMi {
+        padding: 120px 0px;
         }
 }   
