--- a/css/sobre-mi.css/img-sobreMi.css
+++ b/css/sobre-mi.css/img-sobreMi.css
@@ -14,6 +14,7 @@
         .img__sobreMi {
                 height: 150px;
                 padding: 0 15px;
+                align-self: center;
         }
 }
 
