--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,25 @@
 
 /*Proyectos*/
 
+/*Mobile*/
+@media screen and (min-width: 0) {
+    .projects {
+        height: 1850px;
+    }
+}
 
-.projects {
-    height: 1350px;
+/*Tablet*/
+@media screen and (min-width: 768px) {
+    .projects {
+        height: 1900px;
+    }
+}
+
+/*Desktop*/
+@media screen and (min-width: 1024px) {
+    .projects {
+        height: 1350px;
+    }
 }
 
 .container__projects {
@@ -45,26 +61,25 @@
     border-radius: 10px;
 }
 
-
-
 .cards__contenido {
     font-size: 16px;
     line-height: 20px;
 }
+
 .items {
     padding-left: 20px;
 }
+
 .head {
     font-size: 30px;
     line-height: 30px;
-    /*transform: translateY(40px);*/
+    transform: translateY(40px);
     transition: all 0.7s;
 }
 
 .head,
 hr {
     display: block;
-    width: 0;
     border: none;
     border-bottom: solid 2px #5C307D;
     /* position: absolute;
@@ -74,7 +89,7 @@ hr {
     transition: all .5s;
 }
 
-.price {
+.button__tecnoGroup {
     padding-top: 20px;
     padding-bottom: 20px;
     font-size: 22px;
@@ -147,7 +162,7 @@ hr {
     transition-delay: 0.4s;
 }
 
-.cards_projects:hover .overlay .price {
+.cards_projects:hover .overlay .button__tecnoGroup {
     transform: translateY(0px);
     transition-delay: 0.3s;
     opacity: 1;
@@ -163,11 +178,174 @@ hr {
 
 /*********************/
 /*Contacto*/
-.formulario__contacto {
-    background-color: var(--fuente-blanco);
-    padding-top: 30px;
-}
+
 
 .contacto__container {
     display: flex;
+}
+.contenido__formulario{
+    font-family: var(--quattrocento-sans);
+    line-height: 32px;
+    padding-bottom: 24px;
+}
+
+.formulario {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.fieldset {
+    border: none;
+    padding: 0;
+}
+
+@media screen and (min-width: 1024px) {
+    .formulario {
+        width: 60%;
+    }
+}
+
+.formulario__grupo-input {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    box-sizing: border-box;
+    margin-bottom: 1.5rem;
+    position: relative;
+    font-weight: 300;
+}
+
+.formulario__input {
+    box-sizing: border-box;
+    padding: 1.375rem 2rem 0.5rem 0.5rem;
+    min-height: 3.25rem;
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid var(--fuente-lila);
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    cursor: pointer;
+    transition: 0.2s all ease-in;
+    -webkit-transition: 0.2s all ease-in;
+    -moz-transition: 0.2s all ease-in;
+    -ms-transition: 0.2s all ease-in;
+    -o-transition: 0.2s all ease-in;
+}
+
+.textarea {
+    resize: none;
+    overflow: hidden;
+    height: 100px;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+    display: block;
+}
+
+.formulario__label {
+    position: absolute;
+    top: 1.375rem;
+    left: 0.5rem;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.formulario__input::placeholder {
+    visibility: hidden;
+    color: transparent;
+}
+
+.formulario__input:focus {
+    outline: none;
+    border: 2px solid var(--activo);
+    box-shadow: 3px 0px 30px var(--sombra);
+}
+
+.formulario__input:not(:placeholder-shown)+.formulario__label,
+.formulario__input:focus+.formulario__label {
+    font-size: 0.875rem;
+    top: 0.25rem;
+    transition: all 0.25s;
+}
+
+.formulario__validacion-estado {
+    position: absolute;
+    right: 10px;
+    bottom: 15px;
+    font-size: 1rem;
+    opacity: 0;
+}
+
+.formulario__input-error {
+    font-size: 12px;
+    margin-bottom: 1rem;
+    display: none;
+}
+
+.enviar {
+    display: block;
+    background-color: var(--color-fondo);
+    width: 140px;
+    margin: 1rem 0;
+    padding: 0.85rem;
+    box-sizing: border-box;
+    color: var(--color-menu);
+    font-size: 1.125rem;
+    align-self: center;
+    text-align: center;
+    border: none;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    cursor: pointer;
+    transition: 0.5s all ease-in-out;
+    -webkit-transition: 0.5s all ease-in-out;
+    -moz-transition: 0.5s all ease-in-out;
+    -ms-transition: 0.5s all ease-in-out;
+    -o-transition: 0.5s all ease-in-out;
+}
+
+.enviar:disabled {
+    background: #acacac;
+    color: #170101;
+    opacity: 0.6;
+    transition: all 150ms;
+    cursor: none;
+}
+
+/*Estios de validaciones*/
+.formulario__grupo-correcto .formulario__validacion-estado {
+    color: green;
+    opacity: 1;
+}
+
+.formulario__grupo-correcto .formulario__input {
+    border: 2px solid green;
+}
+
+.formulario__grupo-incorrecto {
+    margin-bottom: 0.5rem;
+}
+
+.formulario__grupo-incorrecto .formulario__validacion-estado {
+    color: red;
+    opacity: 1;
+    bottom: 50px;
+}
+
+.formulario__grupo-incorrecto .formulario__label {
+    color: red;
+}
+
+.formulario__grupo-incorrecto .formulario__input {
+    border: 2px solid red;
+}
+
+.formulario__grupo-incorrecto .formulario__input-error {
+    display: block;
 }
